// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownMedia render Video timeline should interact with the player 1`] = `
<div>
  <div
    class="video-container "
  >
    <div>
      <div
        class="react-player"
        controls=""
        playingindex="1"
        url="blob:abc"
        width="100%"
      >
        ReactPlayer
      </div>
    </div>
    <div>
      <div
        class="timelink"
        title="A rude awakening"
      >
        <b
          class="timelink-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-play fa-w-14 "
            data-icon="play"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
              fill="currentColor"
            />
          </svg>
        </b>
        <div
          class="timelink-time-label"
        >
          <b>
            00:02:10
          </b>
          <span>
            A rude awakening
          </span>
        </div>
      </div>
      <div
        class="timelink"
        title="Finally, you are up!"
      >
        <b
          class="timelink-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-pause fa-w-14 "
            data-icon="pause"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
              fill="currentColor"
            />
          </svg>
        </b>
        <div
          class="timelink-time-label"
        >
          <b>
            00:05:30
          </b>
          <span>
            Finally, you are up!
          </span>
        </div>
      </div>
    </div>
    <p
      class="print-view-alt"
    >
      https://www.vimeo.com/253530307
    </p>
  </div>
</div>
`;

exports[`MarkdownMedia render Video timeline should interact with the player 2`] = `
<div>
  <div
    class="video-container "
  >
    <div>
      <div
        class="react-player"
        controls=""
        playingindex="0"
        url="blob:abc"
        width="100%"
      >
        ReactPlayer
      </div>
    </div>
    <div>
      <div
        class="timelink"
        title="A rude awakening"
      >
        <b
          class="timelink-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-pause fa-w-14 "
            data-icon="pause"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M144 479H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h96c26.5 0 48 21.5 48 48v352c0 26.5-21.5 48-48 48zm304-48V79c0-26.5-21.5-48-48-48h-96c-26.5 0-48 21.5-48 48v352c0 26.5 21.5 48 48 48h96c26.5 0 48-21.5 48-48z"
              fill="currentColor"
            />
          </svg>
        </b>
        <div
          class="timelink-time-label"
        >
          <b>
            00:02:10
          </b>
          <span>
            A rude awakening
          </span>
        </div>
      </div>
      <div
        class="timelink"
        title="Finally, you are up!"
      >
        <b
          class="timelink-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-play fa-w-14 "
            data-icon="play"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
              fill="currentColor"
            />
          </svg>
        </b>
        <div
          class="timelink-time-label"
        >
          <b>
            00:05:30
          </b>
          <span>
            Finally, you are up!
          </span>
        </div>
      </div>
    </div>
    <p
      class="print-view-alt"
    >
      https://www.vimeo.com/253530307
    </p>
  </div>
</div>
`;

exports[`MarkdownMedia render should render an iframe with the correct video id 1`] = `
<div>
  <div
    class="video-container "
  >
    <div>
      <div
        class="react-player"
        playingindex="-1"
        style="width: 100%; height: 360px;"
      >
        <video
          controls=""
          preload="auto"
          src="blob:abc"
          style="width: 100%; height: 100%;"
        />
      </div>
    </div>
    <div>
      <div
        class="timelink"
        title="A rude awakening"
      >
        <b
          class="timelink-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-play fa-w-14 "
            data-icon="play"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
              fill="currentColor"
            />
          </svg>
        </b>
        <div
          class="timelink-time-label"
        >
          <b>
            00:02:10
          </b>
          <span>
            A rude awakening
          </span>
        </div>
      </div>
      <div
        class="timelink"
        title="Finally, you are up!"
      >
        <b
          class="timelink-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-play fa-w-14 "
            data-icon="play"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
              fill="currentColor"
            />
          </svg>
        </b>
        <div
          class="timelink-time-label"
        >
          <b>
            00:05:30
          </b>
          <span>
            Finally, you are up!
          </span>
        </div>
      </div>
    </div>
    <p
      class="print-view-alt"
    >
      https://www.vimeo.com/253530307
    </p>
  </div>
</div>
`;

exports[`MarkdownMedia render should use compact class name if compact prop is set 1`] = `
<div>
  <div
    class="video-container compact"
  >
    <div>
      <div
        class="react-player"
        playingindex="-1"
        style="width: 100%; height: 100%;"
      >
        <video
          controls=""
          preload="auto"
          src="blob:abc"
          style="width: 100%; height: 100%;"
        />
      </div>
    </div>
    <div>
      <div
        class="timelink"
        title="A rude awakening"
      >
        <b
          class="timelink-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-play fa-w-14 "
            data-icon="play"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
              fill="currentColor"
            />
          </svg>
        </b>
        <div
          class="timelink-time-label"
        >
          <b>
            00:02:10
          </b>
          <span>
            A rude awakening
          </span>
        </div>
      </div>
      <div
        class="timelink"
        title="Finally, you are up!"
      >
        <b
          class="timelink-icon"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-play fa-w-14 "
            data-icon="play"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
              fill="currentColor"
            />
          </svg>
        </b>
        <div
          class="timelink-time-label"
        >
          <b>
            00:05:30
          </b>
          <span>
            Finally, you are up!
          </span>
        </div>
      </div>
    </div>
    <p
      class="print-view-alt"
    >
      https://www.vimeo.com/253530307
    </p>
  </div>
</div>
`;
